--- a/VarsityVault/package.json
+++ b/VarsityVault/package.json
@@ -1,1 +1,24 @@
-
+{
+  "name": "VarsityVault",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
+    "start": "react-native start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-native": "0.72.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@react-native/metro-config": "^0.72.6",
+    "metro-react-native-babel-preset": "0.76.5"
+  },
+  "engines": {
+    "node": ">=16"
+  }
+}
